<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardio_vascular_disease_predictor"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_margin="20dp">
        </TextView>

        <!-- Layout for Age -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/age_hint"
                android:id="@+id/age"
                android:layout_marginTop="1dp"/>

        </LinearLayout>

        <!-- Layout for Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/height_hint"
                android:id="@+id/height"
                android:layout_marginTop="1dp"/>

        </LinearLayout>

        <!-- Layout for Weight -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/weight_hint"
                android:id="@+id/weight"
                android:layout_marginTop="1dp"/>

        </LinearLayout>

        <!-- Layout for Systolic Blood Pressure -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolic_blood_pressure"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sbp_hint"
                android:id="@+id/sbp"
                android:layout_marginTop="1dp"/>

        </LinearLayout>

        <!-- Layout for Diastolic Blood Pressure -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolic_blood_pressure"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dbp_hint"
                android:id="@+id/dbp"
                android:layout_marginTop="1dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!-- Layout for "Cholesterol" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cholesterol"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/cholesterol_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!-- Layout for "Glucose" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glucose"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/glucose_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!-- Layout for "Smoking" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smoking"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/smoking_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!-- Layout for "Alcohol Intake" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alcohol_intake"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/alcohol_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>

        <!-- Layout for "Physical Activity" -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/physical_activity"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/activity_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/spinner_bg"
                android:gravity="center_vertical" />

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predict"
            android:layout_marginTop="20dp"
            android:id="@+id/predict">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:id="@+id/result">
        </TextView>

    </LinearLayout>

</ScrollView>
